_integration/testsuite/httpproxy/001-required-field-validation.yaml
# Copyright 2020 VMware, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may
# not use this file except in compliance with the License.  You may obtain
# a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  See the
# License for the specific language governing permissions and limitations
# under the License.

apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: missing-condition-header
spec:
  routes:
  - conditions:
    - header:
        present: true
    services:
    - name: foo
      port: 80
$check: |
  matched_cause {
    cause := input.error.details.causes[_]
    cause.reason == "FieldValueRequired"
    cause.field == "spec.routes.conditions.header.name"
  }

  error[msg] {
    not matched_cause
    msg := "No error cause matched FieldValueRequired/spec.routes.conditions.header.name"
  }

---

apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: missing-virtualhost-name
spec:
  virtualhost:
    tls:
      passthrough: true
$check: |
  matched_cause {
    cause := input.error.details.causes[_]
    cause.reason == "FieldValueRequired"
    cause.field == "spec.virtualhost.fqdn"
  }

  error[msg] {
    not matched_cause
    msg := "No error cause matched FieldValueRequired/spec.virtualhost.fqdn"
  }

---

apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: missing-tcp-services
spec:
  tcpproxy:
    services:
$check: |
  matched_cause {
    cause := input.error.details.causes[_]
    cause.reason == "FieldValueInvalid"
    cause.field == "spec.tcpproxy.services"
  }

  error[msg] {
    not matched_cause
    msg := "No error cause matched FieldValueInvalid/spec.tcpproxy.services"
  }

---

apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: missing-includes-name
spec:
  includes:
  - namespace: foo
$check: |
  matched_cause {
    cause := input.error.details.causes[_]
    cause.reason == "FieldValueRequired"
    cause.field == "spec.includes.name"
  }

  error[msg] {
    not matched_cause
    msg := "No error cause matched FieldValueRequired/spec.includes.name"
  }
