_integration/testsuite/httpproxy/011-retry-policy-validation.yaml
# Copyright 2020 VMware, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may
# not use this file except in compliance with the License.  You may obtain
# a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  See the
# License for the specific language governing permissions and limitations
# under the License.

apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: invalid-retry-on-condition
spec:
  routes:
    - conditions:
        - prefix: /
      services:
        - name: foo
          port: 80
      retryPolicy:
        retryOn:
          - foobar
$check: |
  matched_cause {
    cause := input.error.details.causes[_]
    cause.reason == "FieldValueNotSupported"
    cause.field == "spec.routes.retryPolicy.retryOn"
  }

  error[msg] {
    not matched_cause
    msg := "No error cause matched FieldValueInvalid/spec.routes.retryPolicy.retryOn"
  }
