_integration/testsuite/httpproxy/018-external-name-service.yaml
# Copyright Project Contour Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may
# not use this file except in compliance with the License.  You may obtain
# a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  See the
# License for the specific language governing permissions and limitations
# under the License.

apiVersion: v1
kind: Service
metadata:
  name: external-name-svc
spec:
  type: ExternalName
  externalName: projectcontour.io
  ports:
    - name: https
      port: 443
      protocol: TCP

---

apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: external-name-proxy
spec:
  virtualhost:
    fqdn: externalname.bar.com
  routes:
  - services:
    - name: external-name-svc
      port: 443
      protocol: tls
    requestHeadersPolicy:
      set:
      - name: Host
        value: projectcontour.io

---

import data.contour.resources

fatal_proxy_is_not_valid[msg] {
  name := "external-name-proxy"
  proxy := resources.get("httpproxies", name)
  status := object.get(proxy, "status", {})

  object.get(status, "currentStatus", "") != "valid"

  msg := sprintf("HTTP proxy for '%s' is not valid\n%s", [
    name, yaml.marshal(status)
  ])
}

---

import data.contour.http.client
import data.contour.http.client.url
import data.contour.http.expect

Response := client.Get({
  "url": url.http("/"),
  "headers": {
    "Host": "externalname.bar.com",
    "User-Agent": client.ua("external-name-test"),
  },
})

check_for_status_code [msg] {
  msg := expect.response_status_is(Response, 200)
}
